@@ -80,6 +80,8 @@
 			so that we have translations of the languages if needed.
 			-->
 			<para>These &gnomeversion; release notes are available in several languages:
+				<ulink url="../bg/">Albanian</ulink>, 
+				<ulink url="../bg/">Arabicpa</ulink>, 
 				<ulink url="../bg/">Bulgarian</ulink>, 
 				<ulink url="../ca/">Catalan</ulink>,
         <ulink url="../zh_CN/">Chinese (Simplified)</ulink>,
@@ -97,11 +99,12 @@
         <ulink url="../ko/">Korean</ulink>,
 				<ulink url="../lt/">Lithuanian</ulink>, 
         <ulink url="../mk/">Macedonian</ulink>,
-				<ulink url="../pa/">Panjabi</ulink>, 
+				<ulink url="../pa/">Punjabi</ulink>, 
 				<ulink url="../pl/">Polish</ulink>, 
 				<ulink url="../pt_BR/">Portuguese (Brazilian)</ulink>,  
 				<ulink url="../ru/">Russian</ulink>, 
 				<ulink url="../sr/">Serbian</ulink>, 
+				<ulink url="../sr/">Serbian (Latin)</ulink>, 
 				<ulink url="../es/">Spanish</ulink>, 
 				<ulink url="../sv/">Swedish</ulink>,
 				<ulink url="../th/">Thai</ulink>, 
