@@ -11,8 +11,8 @@
     <para>
     Thanks to members of the worldwide <ulink
     url="http://developer.gnome.org/projects/gtp/">GNOME Translation
-    Project</ulink>, GNOME &version; offers support for 45 languages (at least 80 percent of
-    strings translated).
+    Project</ulink>, GNOME &version; offers support for 50 languages (at least 80 percent of
+    strings translated), including the user and administration manuals for many languages.
 
 <!--
 	<figure id="rni18screenshot"> 
@@ -37,9 +37,7 @@
  
     <!-- some languages are currently under quota, but they will be removed prior 
 	 to publication: they are included so translators don't have to update when we know final -->
-    <!-- Information is from http://kvota.net/gnom/stats214.php
-         and http://mail.gnome.org/archives/gnome-i18n/2006-March/msg00034.html
-         Danilo -->
+    <!-- Information is from http://l10n.gnome.org/releases/gnome-2-20 -->
     <!-- po-locations and gtk+-properties are not included in the count: this brought 
 	 Xhosa much closer to supported status; also, language which
 	 don't end up supported will be removed prior to release [there is
@@ -47,6 +45,7 @@
 
   <itemizedlist>
       <!-- 89.75% --><listitem><para>Albanian</para></listitem>
+      <!-- xx.xx% --><listitem><para>Arabic</para></listitem>
       <!-- 92.89% --><listitem><para>Basque</para></listitem>
       <!-- 83.77% --><listitem><para>Bengali</para></listitem>
       <!-- 95.63% --><listitem><para>Brazilian Portuguese</para></listitem>
@@ -103,7 +102,7 @@
     </itemizedlist>
   </para>
 
-  <para>TODO: Update this text: Note that Dzongka, Hebrew Indian Bengali, Latvian, Malayalam, Norwegian Nynorsk, 
+  <para>TODO: Update this text: Note that Dzongkha, Hebrew, Indian Bengali, Latvian, Malayalam, Norwegian Nynorsk, 
     Oriya, Slovenian and Tamil are new supported languages in GNOME &version;,
     thanks to the hard work of their translators. Also noteworthy are that British
     and Canadian English are supported.</para>
