@@ -344,7 +344,7 @@
     <sect2 id="rnusers-accessibility">
       <title>Accessibility</title>
 			<para>GNOME's accessibility support can be customized to allow people with a range or disabilities to use GNOME. The Orca screen-reader is a key part of this support, using speech synthesis, braille, and magnification to assist people with visual impairments.</para>
-			<para>Orca's main advantage is its application-specific support. This means that it has an understanding of the specific user interaction models of particular applications in addition to the general meta-information available via the ATK tooklkit (and the AT-SPI system). For instance, the latest version adds greatly improved support for OpenOffice, Firefox, Thunderbird, GAIM and Java applications. It also now deals with progress bars, tooltips, and notification messages, and can use custom pronunciations for special words.</para>
+			<para>Orca's main advantage is its application-specific support. This means that it has an understanding of the specific user interaction models of particular applications in addition to the general meta-information available via the ATK tooklkit (and the AT-SPI system). For instance, the latest version adds greatly improved support for OpenOffice, Firefox, Thunderbird, Pidgin (previously known as GAIM) and Java applications. It also now deals with progress bars, tooltips, and notification messages, and can use custom pronunciations for special words.</para>
 
     </sect2>
 
