@@ -1,6 +1,14 @@
 2007-09-12  Murray Cumming  <murrayc@murrayc.com>
 
 	* docbook/C/release-notes.xml:
+	* docbook/C/rni18n.xml:
+	* docbook/C/rnusers.xml: Partially update the i18n section.
+	I asked for information from the gnome-i18n group, who usually 
+	do this for me.
+
+2007-09-12  Murray Cumming  <murrayc@murrayc.com>
+
+	* docbook/C/release-notes.xml:
 	* docbook/C/rnadmins.xml:
 	* docbook/C/rndevelopers.xml:
 	* docbook/C/rnusers.xml: Some minor changes suggested by 
